# seabee-back

./: .gitignore  README.rst  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/config/: localdev.env  localdocker.env
api/seabee_back/: app.py  main.py
api/tests/: test_seabee_back.py
db-init/: Dockerfile
db-init/sql/: V1__extensions.sql  V2__initial_dbmodel.sql  V3__test_data.sql
